# kbi

./: .gitignore  CMakeLists.txt  README.md
src/: 1.TestTone.cpp  CMakeLists.txt  Ctrl.cpp  KbiDraw.cpp  KbiWindow.cpp  NotesDrawingArea.cpp  Player.cpp  main.cpp
src/include/: Ctrl.h  KbiDraw.h  KbiWindow.h  NotesDrawingArea.h  Player.h  membuf.h  utilities.h
src/maximilian/: maximilian.cpp  maximilian.h
src/resource/: CMakeLists.txt  instruments.conf  kbi.gresourse.c  kbi.gresourse.xml  resources.c  window.ui
